--- a/src/scss/components/_subtitle.scss
+++ b/src/scss/components/_subtitle.scss
@@ -4,6 +4,7 @@
     font-size: 36px;
     font-weight: 700;
     line-height: 60px;
+    text-align: center;
 
     position: relative;
     &--divider-left {
@@ -25,6 +26,21 @@
             left: 50%;
             bottom: -25px;
             transform: translateX(-50%);
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .subtitle {
+        &--divider-left {
+            &::after {
+                bottom: -15px;
+            }
+        }
+        &--divider-middle {
+            &::after {
+                bottom: -15px;
+            }
         }
     }
 }
