--- a/src/scss/layout/_portfolio.scss
+++ b/src/scss/layout/_portfolio.scss
@@ -15,6 +15,7 @@
         grid-template-columns: repeat(4, 280px);
         grid-auto-rows: 280px;
         gap: 5px;
+        justify-content: center;
     }
 
     &__item {
