--- a/src/scss/media/_media.scss
+++ b/src/scss/media/_media.scss
@@ -370,7 +370,7 @@
         }
 
         &__wrapper {
-            justify-content: center;
+            justify-content: center
         }
     }
 
